modules/gdscript/tests/scripts/runtime/errors/immutable_external_member_attempt_to_modify.gd
func test():
	var test_object = ImmutableTestObject.new();

	test_object.immutable_member = 20.0
